--- a/templates/compare.html
+++ b/templates/compare.html
@@ -152,20 +152,5 @@
 </div>
 
 {% endblock %} {% block scripts %}
-<script>
-  document.addEventListener("DOMContentLoaded", function () {
-    // Initialize Choices.js for all multi-select dropdowns
-    const multiSelects = document.querySelectorAll(".multi-searchable-select");
-
-    multiSelects.forEach(function (element) {
-      new Choices(element, {
-        removeItemButton: true,
-        searchPlaceholderValue: "Type to search...",
-        placeholder: true,
-        // A trick to create a dynamic placeholder based on the element's ID
-        placeholderValue: `Select ${element.id.split("_")[0]}(s)...`,
-      });
-    });
-  });
-</script>
+<script src="{{ url_for('static', filename='custom.js') }}?v=1.1"></script>
 {% endblock %}
