--- a/templates/compare.html
+++ b/templates/compare.html
@@ -87,8 +87,12 @@
         {% endfor %}
       </select>
     </div>
-
-    <button type="submit">Compare Selections</button>
+    <div class="filter-actions">
+      <button type="submit" id="compare-btn">Compare Selections</button>
+      <button type="button" id="reset-filters-btn" class="btn-secondary">
+        Reset
+      </button>
+    </div>
   </form>
 </div>
 
