new trend page showing line chart based on suburb, layout and time period

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,7 @@
         <a href="{{ url_for('add_new_record') }}">Add Record</a>
         <a href="{{ url_for('explore') }}">Explore Data (Single)</a>
         <a href="{{ url_for('compare') }}">Compare (Multi)</a>
+        <a href="{{ url_for('trend') }}">House price trend analysis</a>
       </div>
     </nav>
 
