--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,17 @@
       src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"
       defer
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+      crossorigin=""
+    />
+    <script
+      src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+      crossorigin=""
+    ></script>
   </head>
   <body>
     <nav>
@@ -30,6 +41,7 @@
         <a href="{{ url_for('explore') }}">Explore Data (Single)</a>
         <a href="{{ url_for('compare') }}">Compare (Multi)</a>
         <a href="{{ url_for('trend') }}">House price trend analysis</a>
+        <a href="{{ url_for('show_map') }}">Property Map</a>
       </div>
     </nav>
 
